--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "scripts": {
     "dev": "next -- -p 3001",
     "start": "next start",
+    "start-openfin": "openfin --launch --config ./openfin-app.json",
+    "dev-openfin": "openfin --launch --config ./openfin-app-dev.json",
     "build": "next build && next export"
   },
   "dependencies": {
@@ -28,6 +30,7 @@
     "@ag-grid-community/react": "^24.1.0",
     "@ag-grid-enterprise/all-modules": "^24.1.0",
     "next": "^10.0.1",
+    "openfin-notifications": "^0.12.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
@@ -37,6 +40,7 @@
     "@zeit/next-css": "^1.0.1",
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^5.1.0",
+    "openfin-cli": "^3.0.2",
     "prettier": "^2.1.2",
     "typescript": "^4.0.5"
   }
