--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@ag-grid-community/react": "^24.1.0",
     "@ag-grid-enterprise/all-modules": "^24.1.0",
     "next": "^10.0.1",
+    "normalize.css": "^8.0.1",
     "openfin-notifications": "^0.12.8",
+    "openfin-react-hooks": "^2.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
