--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "build": "next build && next export"
   },
   "dependencies": {
-    "@adaptabletools/adaptable": "7.1.0-canary.1",
-    "@adaptabletools/adaptable-plugin-charts": "7.1.0-canary.1",
-    "@adaptabletools/adaptable-plugin-finance": "7.1.0-canary.1",
-    "@adaptabletools/adaptable-plugin-nocode-aggrid": "7.1.0-canary.1",
-    "@adaptabletools/adaptable-react-aggrid": "7.1.0-canary.1",
+    "@adaptabletools/adaptable": "7.2.1",
+    "@adaptabletools/adaptable-plugin-charts": "7.2.1",
+    "@adaptabletools/adaptable-plugin-finance": "7.2.1",
+    "@adaptabletools/adaptable-plugin-openfin": "7.2.1",
+    "@adaptabletools/adaptable-plugin-nocode-aggrid": "7.2.1",
+    "@adaptabletools/adaptable-react-aggrid": "7.2.1",
     "@ag-grid-community/react": "^24.1.0",
     "@ag-grid-enterprise/all-modules": "^24.1.0",
     "next": "^10.0.1",
