--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "@adaptabletools/adaptable": "7.2.7",
     "@adaptabletools/adaptable-plugin-charts": "7.2.7",
     "@adaptabletools/adaptable-plugin-finance": "7.2.7",
-    "@adaptabletools/adaptable-plugin-openfin": "7.2.7",
     "@adaptabletools/adaptable-plugin-nocode-aggrid": "7.2.7",
+    "@adaptabletools/adaptable-plugin-openfin": "7.2.7",
     "@adaptabletools/adaptable-react-aggrid": "7.2.7",
     "@ag-grid-community/react": "^24.1.0",
     "@ag-grid-enterprise/all-modules": "^24.1.0",
+    "modern-normalize": "^1.0.0",
     "next": "^10.0.1",
     "normalize.css": "^8.0.1",
     "openfin-notifications": "^0.12.8",
