--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@ag-grid-community/react": "^24.1.0",
     "@ag-grid-enterprise/all-modules": "^24.1.0",
     "modern-normalize": "^1.0.0",
-    "next": "^10.0.1",
+    "next": "10.0.1",
     "normalize.css": "^8.0.1",
     "openfin-notifications": "^0.12.8",
     "react": "^17.0.1",
