--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/node": "^13.11.1",
     "@types/react": "^16.9.56",
     "@zeit/next-css": "^1.0.1",
+    "@types/openfin": "^51.0.0",
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^5.1.0",
     "openfin-cli": "^3.0.2",
