--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "dev-openfin": "openfin --launch --config ./openfin-app-dev.json",
     "build": "next build && next export && npm run appjson && npm run build-help && cpy pack-settings.json out && cpy _headers out",
     "appjson": "node scripts/appdev.js",
-    "build-help": "rimraf README.html && node scripts/build-help.js \"Demo Guide\" && cpy README.html out/help.html"
+    "build-help": "rimraf README.html && node scripts/build-help.js \"Demo Guide\" && rimraf out/help.html && cpy README.html --rename=help.html out"
   },
   "dependencies": {
     "@adaptabletools/adaptable": "8.0.5",
