--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "build-help": "rimraf README.html && node scripts/build-help.js \"Demo Guide\" && rimraf out/help.html && cpy README.html --rename=help.html out"
   },
   "dependencies": {
-    "@adaptabletools/adaptable": "8.2.1",
-    "@adaptabletools/adaptable-plugin-charts": "8.2.1",
-    "@adaptabletools/adaptable-plugin-finance": "8.2.1",
-    "@adaptabletools/adaptable-plugin-nocode-aggrid": "8.2.1",
-    "@adaptabletools/adaptable-plugin-openfin": "8.2.1",
-    "@adaptabletools/adaptable-react-aggrid": "8.2.1",
+    "@adaptabletools/adaptable": "9.0.0-canary.5",
+    "@adaptabletools/adaptable-plugin-charts": "9.0.0-canary.5",
+    "@adaptabletools/adaptable-plugin-finance": "9.0.0-canary.5",
+    "@adaptabletools/adaptable-plugin-nocode-aggrid": "9.0.0-canary.5",
+    "@adaptabletools/adaptable-plugin-openfin": "9.0.0-canary.5",
+    "@adaptabletools/adaptable-react-aggrid": "9.0.0-canary.5",
     "@ag-grid-community/react": "^25.0.1",
     "@ag-grid-enterprise/all-modules": "^25.0.1",
     "iframe-resizer-react": "^1.1.0",
