--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "start": "next start",
     "start-openfin": "openfin --launch --config ./openfin-app.json",
     "dev-openfin": "openfin --launch --config ./openfin-app-dev.json",
+    "home-dev-openfin": "npm run appjson && openfin --launch --config ./openfin-app-home.json",
     "build": "next build && next export && npm run appjson && npm run build-help && cpy pack-settings.json out && cpy _headers out",
     "appjson": "node scripts/appdev.js",
     "build-help": "rimraf README.html && node scripts/build-help.js \"Demo Guide\" && rimraf out/help.html && cpy README.html --rename=help.html out"
